--- a/test/client/BeiBei.css
+++ b/test/client/BeiBei.css
@@ -1881,12 +1881,13 @@ input[type=checkbox]:checked+label {
 
 #__Page44__text__container {
     width: 76vw;
-    height: 13vh;
+    height: 15vh;
     display: flex;
-    align-items: center;
+    align-items: end;
     justify-content: start;
-	margin-top: 7vh;
-    margin-left: 10vw;
+    /* margin-top: 7vh; */
+    margin-left: 12vw;
+    margin-bottom: 1vh;
 }
 #__Page44__datetext__container {
     width: 76vw;
@@ -1971,7 +1972,7 @@ input[type=checkbox]:checked+label {
 #__Page44__result__container {
     width: 100vw;
     height: 27vh;
-    margin-top: -8vh;
+    margin-top: -6vh;
     padding-top: 0vh;
     box-sizing: border-box;
     display: flex;
@@ -2132,4 +2133,222 @@ input[type=checkbox]:checked+label {
     height: calc(50vh);
     overflow-x: hidden;
     /* background-color: white; */
+}
+#__Page47__fullscreen {
+    margin-top: 6.5vh;
+    height: 93.5vh;
+	font-weight: 1000;
+    -webkit-text-stroke: 0.5px #000;
+}
+#__Page47__header__container {
+    background-color: #f1f1f1;
+    border: 3px solid #000000;
+    border-bottom: 0;
+    border-radius: 15px 15px 0px 0px;
+    padding: 2.25vh 5vw;
+    height: 2.75vh;
+}
+#__Page47__ok {
+    display: inline;
+    font-size: 20px;
+    position: fixed;
+    transform: translateX(22.25vw);
+}
+#__Page47__form__container {
+    height: 38vh;
+}
+#__Page47__inform__bar {
+    background-color: #f1f1f1;
+    border: 3px solid #000000;
+    border-top: 0;
+    display: inline-block;
+    padding-top: 2vh;
+    height: 9.5vh;
+    width: 100vw;
+    box-sizing: border-box;
+}
+#__Page47__item_name {
+    background-color: #f1f1f1;
+    border: none;
+    font-size: 20px;
+    outline: none;
+    padding-left: 0;
+    width: 22vw;
+}
+#__Page47__item_cost {
+    background-color: #f1f1f1;
+    border: none;
+    font-size: 32px;
+    outline: none;
+    padding-left: 0;
+    text-align: right;
+    /* height: 4.5vh; */
+    width: 54vw;
+}
+#__Page47__cardfront__container {
+    height: 64.6vh;
+    position: relative;
+	font-weight: 1000;
+    -webkit-text-stroke: 0.1px #000;
+	/*display: none;*/
+}
+.__Page47__cardfront__bar {
+    width: 82vw;
+    height: 64.6vh;
+    background: #dcdcdc;
+    border: 4px solid #000000;
+    box-shadow: 4px 4px 4px rgb(0 0 0 / 25%);
+    border-radius: 20px;
+	position: absolute;
+}
+.__Page47__cardName {
+    height: 5.7vh;
+    display: flex;
+    align-items: center;
+    margin-top: 2.65vw;
+}
+.__Page47__cardNameText {
+    font: 5vw int6;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 4vw;
+}
+.__Page47__cameraImg {
+    width: 9.3vw;
+    height: 3.8vh;
+    background-image: url(./final_icon/camera.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin: 0 0;
+}
+.__Page47__uploadText {
+    font: 6vw int6;
+    margin: 0 0;
+}
+.__Page47__imgUpload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 22.4vh;
+}
+.__Page47__spec {
+    height: 7.5vh;
+}
+.__Page47__spec, #__Page47__message {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 2.3vh;
+}
+.__Page47__cardName, .__Page47__imgUpload, .__Page47__spec, #__Page47__message {
+    width: 65vw;
+    background: #ffffff;
+    border: 3px solid #000000;
+    box-shadow: 4px 4px 0px #000000;
+    border-radius: 10px;
+    margin-left: 8.5vw;
+    margin-right: 8.5vw;
+}
+#__Page47__specText, #__Page47__messageText {
+    font: 3vw int6;
+    color: #494949;
+    margin-left: 4.2vw;
+    margin-top: 1.3vh;
+    margin-bottom: 0px;
+}
+#__Page47__specInput, #__Page47__messageInput {
+    margin-top: 0.2vh;
+    margin-bottom: 0px;
+    margin-left: 4.2vw;
+	width: 56.8vw;
+    font: 4vw int6;
+    color: #000000;
+    border: 0;
+    border-radius: 7px;
+}
+#__Page47__message {
+    height: 11.5vh;
+    margin-bottom: 2.65vh;
+}
+#__Page47__cardback__container {
+    height: 64.6vh;
+}
+.__Page47__cardback__bar {
+    width: 82vw;
+    height: 64.6vh;
+    background: #FFA500;
+    border: 4px solid #000000;
+    box-shadow: 4px 4px 4px rgb(0 0 0 / 25%);
+    border-radius: 20px;
+	position: absolute;
+	transform: rotatey(0deg);
+}
+#__Page47__iconimg__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFA500;
+    width: 82vw;
+    height: 64.6vh;
+    border-radius: 20px;
+}
+.__Page47__cardfront__bar {
+    transform: rotatey(-180deg);
+}
+.__Page47__cardfront__bar,.__Page47__cardback__bar {
+	backface-visibility: hidden;
+	transition: transform 1.5s ease-in-out;
+}
+#__Page47__informnotification__container {
+    background-image: url(./midterm_icon/notification2.png);
+    background-size: 80vw 22vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 82vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 11;
+	transform: rotatey(-90deg);
+	backface-visibility: hidden;
+	transition: transform 0.5s ease-in-out;
+	display: none;
+}
+#__Page47__inform {
+    width: 77vw;
+    position: fixed;
+    height: 15.5vh;
+    display: flex;
+    margin: 35.4vh 11vw 0;
+    flex-direction: column;
+    text-align: left;
+    overflow-x: hidden;
+    background-color: white;
+    border-radius: 0 0 5px 5px;
+	-webkit-text-stroke: 0.1px #000;
+}
+#__Page47__informtext1,#__Page47__informtext2 {
+    margin: 1vh 0 0 0;
+    font-size: 2vh;
+    font-weight: 1000;
+}
+.__Page47__handsetting {
+    /* left: 10vw; */
+    top: 1vh;
+    font-size: 4vw;
+    font-weight: 1000;
+    position: relative;
+    margin: 0;
+    height: 4vh;
+    width: 29vw;
+    background-color: #E5E5E5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid #000000;
+    box-shadow: 1vw 1vw 0px #000000;
+    border-radius: 10px;
+    -webkit-text-stroke: 0.5px #000;
 }
