--- a/test/client/BeiBei.css
+++ b/test/client/BeiBei.css
@@ -290,7 +290,7 @@ body {
 
 #__Page2__card__bar {
 	width: 82vw;
-	height: 64.6vh;
+	height: 66.6vh;
 	background: #dcdcdc;
 	border: 4px solid #000000;
 	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
@@ -328,8 +328,11 @@ body {
 }
 
 #__Page2__cardStar {
-	height: 7.2vh;
-	align-items: center;
+    height: 7.2vh;
+    margin-left: 8.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: start;
 }
 
 #__Page2__imgUpload {
@@ -1296,7 +1299,8 @@ input[type=checkbox]:checked+label {
     justify-content: start;
     flex-direction: column;
     border: 3px solid #000000;
-    border-radius: 30px 30px 0 0;
+	border-radius: 15px 15px 0px 0px;
+    /*border-radius: 30px 30px 0 0;*/
     margin-top: 5vh;
 }
 .__Page38__paytypetop1 {
@@ -1363,7 +1367,8 @@ input[type=checkbox]:checked+label {
     justify-content: space-between;
     flex-direction: row;
     border: 3px solid #000000;
-    border-radius: 30px 30px 0 0;
+    /*border-radius: 30px 30px 0 0;*/
+	border-radius: 15px 15px 0px 0px;
     margin-bottom: 3vh;
     margin-top: -0.5vh;
     background-color: #383838;
@@ -2196,7 +2201,7 @@ input[type=checkbox]:checked+label {
 }
 .__Page47__cardfront__bar {
     width: 82vw;
-    height: 64.6vh;
+    height: 66.6vh;
     background: #dcdcdc;
     border: 4px solid #000000;
     box-shadow: 4px 4px 4px rgb(0 0 0 / 25%);
@@ -2279,7 +2284,7 @@ input[type=checkbox]:checked+label {
 }
 .__Page47__cardback__bar {
     width: 82vw;
-    height: 64.6vh;
+    height: 66.6vh;
     background: #FFA500;
     border: 4px solid #000000;
     box-shadow: 4px 4px 4px rgb(0 0 0 / 25%);
@@ -2354,6 +2359,23 @@ input[type=checkbox]:checked+label {
     border-radius: 10px;
     -webkit-text-stroke: 0.5px #000;
 }
+.__Page47__luckysetting {
+    top: 1vh;
+    font-size: 4vw;
+    font-weight: 1000;
+    position: relative;
+    margin: 0;
+    height: 4vh;
+    width: 29vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid #000000;
+    box-shadow: 1vw 1vw 0px #000000;
+    border-radius: 10px;
+    -webkit-text-stroke: 0.5px #000;
+	background-color: #FFEC19;
+}
 
 
 
@@ -2415,4 +2437,16 @@ input[type=checkbox]:checked+label {
     font-weight: 1000;
     -webkit-text-stroke: 0.2px #000;
     margin-bottom: 0;
+}
+
+.__Page38__informphotoimg {
+    width: 2.5vh;
+    height: 2.5vh;
+}
+#__Page47__cardStar {
+    height: 7.2vh;
+    margin-left: 8.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: start;
 }
