--- a/test/client/mainpage_style.css
+++ b/test/client/mainpage_style.css
@@ -35,6 +35,8 @@ span {
 
 #__Register__fullscreen {
     position: relative;
+    overflow: hidden;
+    height: 100vh;
 }
 
 #__Register__form-normal__container {
