--- a/test/client/BeiBei.css
+++ b/test/client/BeiBei.css
@@ -1491,8 +1491,8 @@ input[type=checkbox]:checked+label {
     position: relative;
     /* margin-right: 6vw; */
     display: flex;
-    align-items: start;
-    /* justify-content: center; */
+    align-items: center;
+    justify-content: center;
     /* flex-direction: column; */
     width: 11vw;
     height: calc(11vw + 1vh);
@@ -2452,6 +2452,7 @@ input[type=checkbox]:checked+label {
 .__Page38__informphotoimg {
     width: 2.5vh;
     height: 2.5vh;
+	margin: 0;
 }
 #__Page47__cardStar {
     height: 7.2vh;
@@ -2498,4 +2499,59 @@ input[type=checkbox]:checked+label {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+
+
+
+#__Page68__fullscreen__container {
+    width: 98vw;
+    height: calc(95vh - 6px);
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    border: 3px solid #000000;
+    border-radius: 15px 15px 0px 0px;
+    /* border-radius: 30px 30px 0 0; */
+    margin-top: 5vh;
+}
+#__Page68__inform__container {
+    width: 100vw;
+    height: 50vh;
+    border-radius: 4px;
+    position: fixed;
+    /* display: flex; */
+    /* align-items: center; */
+    justify-content: center;
+    text-align: center;
+    z-index: 10;
+    display: none;
+}
+
+#__Page69__inform__container {
+    width: 100vw;
+    height: 50vh;
+    border-radius: 4px;
+    position: fixed;
+    /* display: flex; */
+    /* align-items: center; */
+    justify-content: center;
+    text-align: center;
+    z-index: 10;
+    display: none;
+}
+#__Page61__decorates__container {
+    width: 76vw;
+    height: 0.3vh;
+    margin-bottom: 2vh;
+    margin-top: -1vh;
+    background-color: #494949;
+}
+.__Page61__costtotal2 {
+    font-size: 2vh;
+    font-weight: 1000;
+    color: #000000;
+    margin-left: 1vw;
+    margin-top: 0.1em;
 }
