alter the style moderately

--- a/test/client/BeiBei.css
+++ b/test/client/BeiBei.css
@@ -342,7 +342,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	height: 22.4vh;
-    background: url('./final_photo/DIRTY.jpg');
+    background: url('./final_photo/oldman.png');
     background-size: 100% 100%;
 }
 
